--- a/projects/miesianhouse/miesianhouse.css
+++ b/projects/miesianhouse/miesianhouse.css
@@ -9,17 +9,23 @@ html, body {
 
 .project-container {
   padding: 3rem 2rem;
-  max-width: 800px;
+  max-width: 100%;
   margin: 0 auto;
   display: flex;
   flex-direction: column;
   gap: 2rem;
 }
 
+.content {
+  margin-top: clamp(4rem, 12vw, 12rem);
+}
+
 .project-title {
-  font-size: 2.5rem;
+    position: sticky;
+  top: 20px;  
+    font-family: Helvetica;
+  font-size: clamp(2rem, 10vw, 10rem);;
   text-transform: uppercase;
-  letter-spacing: 0.05em;
   margin: 0;
 }
 
