--- a/projects/miesianhouse/miesianhouse.css
+++ b/projects/miesianhouse/miesianhouse.css
@@ -27,6 +27,7 @@ html, body {
   font-size: clamp(2rem, 10vw, 10rem);;
   text-transform: uppercase;
   margin: 0;
+    z-index: 1000;
 }
 
 .project-image {
