--- a/projects/miesianhouse/miesianhouse.css
+++ b/projects/miesianhouse/miesianhouse.css
@@ -28,6 +28,7 @@ html, body {
   text-transform: uppercase;
   margin: 0;
     z-index: 1000;
+    animation: titleFade 0.8s ease-out forwards;
 }
 
 .project-image {
