--- a/projects/miesianhouse/miesianhouse.css
+++ b/projects/miesianhouse/miesianhouse.css
@@ -31,6 +31,13 @@ html, body {
     animation: titleFade 0.8s ease-out forwards;
 }
 
+@keyframes titleFade {
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
 .project-image {
   width: 100%;
   height: auto;
