--- a/projects/miesianhouse/miesianhouse.css
+++ b/projects/miesianhouse/miesianhouse.css
@@ -3,7 +3,7 @@ html, body {
   padding: 0;
   font-family: Helvetica, sans-serif;
   background: white;
-  color: black;
+  color: var(--reality-color);
   cursor: none; /* Nasconde cursore di default */
 }
 
