--- a/projects/miesianhouse/miesianhouse.css
+++ b/projects/miesianhouse/miesianhouse.css
@@ -95,7 +95,7 @@ html, body {
   left: 10px;
   font-family: monospace;
   font-size: 0.9rem;
-  color: black;
+  color: var(--reality-color);
 
 }
 
