--- a/projects/tetra/tetra.css
+++ b/projects/tetra/tetra.css
@@ -48,17 +48,20 @@ html, body {
   white-space: pre-wrap;
 }
 
-/* Contenitore immagini aggiuntive */
+/* Contenitore immagini aggiuntive -> griglia responsive */
 .additional-images {
-  display: flex;
-  flex-direction: column;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
   gap: 1.5rem;
+  margin-top: 2rem;
 }
 
 /* Singola immagine con didascalia */
 .additional-image {
   position: relative;
-  display: inline-block;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   cursor: none;
   border-radius: 4px;
   overflow: hidden;
@@ -76,14 +79,13 @@ html, body {
   content: none;
 }
 
-/* Didascalia in basso a sinistra */
+/* Didascalia */
 .additional-image figcaption {
-  position: relative;
-  bottom: 0px;
-  left: 0px;
+  margin-top: 5px;
   font-family: monospace;
   font-size: 0.9rem;
   color: var(--reality-color);
+  text-align: center;
 }
 
 #back-link {
